the good practices recommended by sonar lint are implemented